@@ -1,3 +1,4 @@
+231229 change value iteration
 231229 run experiment
 230920 add offline rl
 230824 maze env improvement
